--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,23 @@
+body{
+  margin: 0;
+  padding: 50px;
+  background: linear-gradient(to right, #13547a, #80d0c7);
+}
 .App {
   text-align: center;
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 15vmin;
   pointer-events: none;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
